# rivetOS

./: .dockerignore  .env.example  .gitignore  .gitmodules  .prettierrc  AGENT.md  ARCHITECTURE.md  AUDIT.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FOCUS.md  LICENSE  LINT_PROGRESS.md  MEMORY.md  MIGRATION.md  NOTICE  README.md  config.example.yaml  docker-compose.yaml  eslint.config.mjs  nx.json  package-lock.json  package.json  tsconfig.base.json  vitest.config.ts
.claude-plugin/: marketplace.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.grok/: marketplace.json
apps/rivethub-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/rivethub-desktop/src-tauri/capabilities/: default.json
apps/rivethub-desktop/src-tauri/src/: lib.rs  main.rs
docs/: ARCHITECTURE.md  CODEBASE-REFERENCE.md  COLLABORATION.md  CONFIG-REFERENCE.md  DECISIONS.md  DELEGATION.md  DEN.md  DEPLOYMENT.md  FILESYSTEM.md  GETTING-STARTED.md  MEMORY-DESIGN.md  MILESTONE-2-3-ANALYSIS.md  PHASE2.md  PLUGINS.md  RELEASES.md  ROADMAP.md  SKILLS.md  TROUBLESHOOTING.md  architecture.md  mcp-auth.md  mesh.md  phase-0.25-migration.md
examples/: README.md  homelab.yaml  local-only.yaml  multi-agent.yaml  single-agent.yaml
infra/: package.json  project.json  tsconfig.json
integrations/hermes/rivet-memory/: .gitignore  README.md  __init__.py  capture.py  cli.py  client.py  expand.py  plugin.yaml  pyproject.toml  recall.py  requirements.txt  schema.py  scoring.py  tools.py
integrations/hermes/rivet-memory/tests/: conftest.py  test_capture.py  test_recall.py  test_round_trip.py  test_scoring.py
references/: rivetos.md
scripts/: bootstrap-certs.sh  boundary-probe.mjs  bundle.mjs  cleanup-embedder-dead-letter.sql  grant-rivet-sudo.sh  install-hooks.mjs  link-cli.mjs  (+7 more)
(+1174 files in other folders)
