# RivetHub desktop shell (phase 4j) — deliberately outside the nx/npm build
# graph's critical path: Gradle-style colocated Rust, built where a desktop
# lives (phildesk), not in CI.
[package]
name = "rivethub-desktop"
version = "0.4.0"
description = "RivetHub desktop — thin Tauri shell over rivethub-web"
edition = "2021"

[lib]
name = "rivethub_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
