[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rivet-memory-hermes"
version = "0.1.0"
description = "RivetOS shared-memory provider plugin for Hermes."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "RivetOS" }]
dependencies = [
    "psycopg[binary]>=3.2",
    "psycopg_pool>=3.2",
    "PyYAML>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
]

[tool.setuptools]
# Plugin runs as a directory under $HERMES_HOME/plugins/rivet_memory/.
# This pyproject only exists so dependencies can be `pip install`-ed into the
# Hermes venv. It does NOT register the provider via entry points — Hermes
# discovers providers by directory scan, not pip metadata.
py-modules = []

[tool.ruff]
line-length = 100
target-version = "py311"
